--- a/css.html
+++ b/css.html
@@ -229,7 +229,7 @@
      </div>
     </div> 
     <div class="pannel4">
-      <p>condition of Use &nbsp; &nbsp; privacy notice   your ads privacy choices</p> 
+      <p>condition of Use &nbsp; &nbsp; privacy notice and your ads privacy choices</p> 
       <p class="second-line">© 1996-2023, Amazon.com, Inc. or its affiliates</p>
     </div>
  </footer>
