--- a/css.html
+++ b/css.html
@@ -1,3 +1,4 @@
+<!--amazon-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -87,6 +88,7 @@
     
   </header>
   
+
   <!-- hero section -->
   <div class="hero-sec">
 
@@ -165,7 +167,7 @@
     <!-- footer part -->
  <footer>
    <div class="foot-pannel1">
-     Back to top
+     <a href=http://127.0.0.1:5501/css.html class="foot-link">Back to top</a>
    </div>
    <div class="foot-pannel2">
      <ul>
